name:                Mine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dkpsk/Mine#readme
license:             BSD3
license-file:        LICENSE
author:              dkpsk
maintainer:          example@example.com
copyright:           Copyright(c) dkpsk.
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Mine
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
